Simplified TournamentTree styling away from a grid to a simple flexbox, with the items aligned center. This now means specific grid positioning for x number of rows (which would have been impossible) is now no longer necessary.

--- a/src/styles/TournamentTree.scss
+++ b/src/styles/TournamentTree.scss
@@ -1,18 +1,7 @@
 @import "./Global.scss";
 
-.TournamentTree__Left {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: minmax(10px, auto);
+.TournamentTree {
+    display: flex;    
     column-gap: 1rem;
-}
-
-.TournamentTree__QuarterFinals {
-    grid-row: 1 / 6;
-}
-.TournamentTree__SemiFinals {
-    grid-row: 2 / 5;
-}
-.TournamentTree__Finals {
-    grid-row: 3 / 4;
+    align-items: center;
 }
